--- a/config/locales/devise.zh-CN.yml
+++ b/config/locales/devise.zh-CN.yml
@@ -21,7 +21,7 @@ zh-CN:
     sessions:
       signed_in: '登录成功.'
       signed_out: '退出成功.'     
-      sign_id: '登录'
+      sign_in: '登录'
     passwords:
       send_instructions: '几分后，您将收到重置密码的电子邮件.'
       updated: '您的密码已修改成功，请重新登录.'
